Kind/Samples/kafka/debezium-ui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debezium-ui
  namespace: kafka
spec:
  containers:
  - name: debezium-ui
    image: quay.io/debezium/debezium-ui:2.1.2.Final
    ports:
    - containerPort: 8080
