Kind/Samples/kafka/kafka-ui.yaml
#helm install kafka-ui kafka-ui/kafka-ui \
#   --set envs.config.KAFKA_CLUSTERS_0_NAME=local \
#   --set envs.config.KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=my-cluster-kafka-bootstrap:9092 \
#   --namespace kafka

apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka-ui
  ports:
    - port: 80
      targetPort: 8080
      

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
