Kind/Samples/kafka/debezium-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debeziumui-ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: debezium-ui.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
               name: debezium-ui
               port:
                 number: 80
