Kind/Samples/kafka/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafkaui-ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kafka-ui.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
               name: kafka-ui
               port:
                 number: 80
